force-app/main/default/objects/Currency_Exchange__c/Currency_Exchange__c.object-meta.xml
<CustomObject>
    <label>Currency Exchange</label>
    <nameField>
        <displayFormat>CU-{0000}</displayFormat>
        <label>Market Rates Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Currency Exchanges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>