force-app/main/default/objects/Currency_Exchange__c/fields/baseCurrency__c.field-meta.xml
<CustomField>
    <fullName>baseCurrency__c</fullName>
    <label>baseCurrency</label>
    <length>25</length>
    <type>Text</type>
</CustomField>