force-app/main/default/objects/Currency_Exchange__c/fields/currency__c.field-meta.xml
<CustomField>
    <fullName>currency__c</fullName>
    <label>Currency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GBP</fullName>
            </value>
            <value>
                <fullName>CAD</fullName>
            </value>
            <value>
                <fullName>AUD</fullName>
            </value>
            <value>
                <fullName>CHF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>