force-app/main/default/objects/Currency_Exchange__c/fields/Exchange_rate__c.field-meta.xml
<CustomField>
    <fullName>Exchange_rate__c</fullName>
    <label>Exchange rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>