force-app/main/default/objects/Currency_Exchange__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>currency__c</columns>
    <columns>Exchange_rate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>